Add todo for the config service

--- a/config-service/src/main/resources/application.yml
+++ b/config-service/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     active: native
   security:
     user:
-      password: admin
+      password: admin #TODO: Make password configurable
 
 server:
   port: 8001
