--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <java.version>11</java.version>
-        <spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
+        <spring-cloud.version>2021.0.0</spring-cloud.version>
     </properties>
 
     <dependencyManagement>
@@ -38,5 +38,6 @@
     <modules>
         <module>config-service</module>
         <module>api-gateway</module>
+        <module>eureka-server</module>
     </modules>
 </project>
