--- a/balance-service/src/main/resources/application.yml
+++ b/balance-service/src/main/resources/application.yml
@@ -10,6 +10,9 @@ spring:
     password: password
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
+    generate-ddl: true
+    hibernate:
+      ddl-auto: update
 
 # Register in Eureka Server
 eureka:
