Add balance-service to project pom

--- a/pom.xml
+++ b/pom.xml
@@ -39,5 +39,6 @@
         <module>config-service</module>
         <module>api-gateway</module>
         <module>eureka-server</module>
+        <module>balance-service</module>
     </modules>
 </project>
