chore: Cleanup discovery-service and move it to centralized config

--- a/discovery-service/pom.xml
+++ b/discovery-service/pom.xml
@@ -4,8 +4,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>eureka-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>eureka-server</name>
-	<description>eureka-server</description>
+	<name>discovery-service</name>
+	<description>discovery-service</description>
 	<parent>
 		<groupId>com.kadmos</groupId>
 		<artifactId>savings-account-with-gw</artifactId>
@@ -17,11 +17,9 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
 		</dependency>
-
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
 	</dependencies>
 
