--- a/discovery-service/src/main/resources/application.yml
+++ b/discovery-service/src/main/resources/application.yml
@@ -1,15 +1,5 @@
-server:
-  port: 1111
-
 spring:
   application:
-    name: eureka
-
-eureka:
-  instance:
-    hostname: localhost
-  client:
-    register-with-eureka: false
-    fetch-registry: false
-    service-url:
-      defaultZone: http://localhost:1111/eureka
+    name: discovery-service
+  config:
+    import: "optional:configserver:http://localhost:8001"
