--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
     <modules>
         <module>config-service</module>
         <module>api-gateway</module>
-        <module>eureka-server</module>
+        <module>discovery-service</module>
         <module>balance-service</module>
     </modules>
 </project>
