--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <maven.compiler.target>17</maven.compiler.target>
         <java.version>11</java.version>
         <spring-cloud.version>2021.0.0</spring-cloud.version>
+        <springdoc.version>1.6.5</springdoc.version>
     </properties>
 
     <dependencyManagement>
