Add the docker config v0

--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
-CONFIG_SERVICE=config-service
+CONFIG_SERVICE=localhost
 RDS_DBNAME=savings
 RDS_USERNAME=savingsuser
 RDS_PASSWORD=password
 RDS_PORT=54320
-RDS_HOST=db
-DISCOVERY_SERVICE=discovery-service
+RDS_HOST=localhost
+DISCOVERY_SERVICE=localhost
