--- a/config-service/src/main/resources/services/discovery-service.yml
+++ b/config-service/src/main/resources/services/discovery-service.yml
@@ -3,7 +3,7 @@ server:
 
 eureka:
   instance:
-    hostname: localhost
+    hostname: ${DISCOVERY_SERVICE}
   client:
     registerWithEureka: false
     fetchRegistry: false
