--- a/balance-service/src/main/resources/application.yml
+++ b/balance-service/src/main/resources/application.yml
@@ -1,5 +1,3 @@
 spring:
-  application:
-    name: balance-service
   config:
-    import: "optional:configserver:http://localhost:8001"
+    import: "optional:configserver:http://${CONFIG_SERVICE}:8001"
