--- a/config-service/Dockerfile
+++ b/config-service/Dockerfile
@@ -1,14 +1,4 @@
-FROM maven:3.8.4-openjdk-11-slim AS MAVEN_BUILD
-
-COPY pom.xml /build/
-COPY src /build/src/
-
-WORKDIR /build/
-
-RUN mvn -Dmaven.test.skip=true package
-
-FROM openjdk:11-jre
-WORKDIR /app
-COPY --from=MAVEN_BUILD /build/target/config-service-1.0.0.jar /app/
-
-ENTRYPOINT ["java", "-jar", "config-service-1.0.0.jar"]
+FROM openjdk:17-jdk-alpine
+EXPOSE 8001
+COPY target/config-service-0.0.1-SNAPSHOT.jar .
+ENTRYPOINT ["java", "-jar", "config-service-0.0.1-SNAPSHOT.jar"]
