--- a/config-service/src/main/resources/services/api-gateway.yml
+++ b/config-service/src/main/resources/services/api-gateway.yml
@@ -4,7 +4,7 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8002/eureka/
+      defaultZone: http://${DISCOVERY_SERVICE}:8002/eureka/
               
 spring:
   cloud:
