--- a/discovery-service/src/main/resources/application.yml
+++ b/discovery-service/src/main/resources/application.yml
@@ -2,4 +2,4 @@ spring:
   application:
     name: discovery-service
   config:
-    import: "optional:configserver:http://localhost:8001"
+    import: "optional:configserver:http://${CONFIG_SERVICE}:8001"
