--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,7 @@ services:
       RDS_PASSWORD: ${RDS_PASSWORD}
       RDS_PORT: ${RDS_PORT}
       RDS_HOST: ${RDS_HOST}
+      SPRING_PROFILES_ACTIVE: a
       spring.application.name: balance-service-a
     ports:
       - "8081:8081"
