--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,6 @@ services:
       RDS_PASSWORD: ${RDS_PASSWORD}
       RDS_PORT: ${RDS_PORT}
       RDS_HOST: ${RDS_HOST}
-      SPRING_PROFILES_ACTIVE: a
       spring.application.name: balance-service-a
     ports:
       - "8081:8081"
@@ -64,6 +63,12 @@ services:
     environment:
       CONFIG_SERVICE: ${CONFIG_SERVICE}
       DISCOVERY_SERVICE: ${DISCOVERY_SERVICE}
+      RDS_DBNAME: ${RDS_DBNAME}
+      RDS_USERNAME: ${RDS_USERNAME}
+      RDS_PASSWORD: ${RDS_PASSWORD}
+      RDS_PORT: ${RDS_PORT}
+      RDS_HOST: ${RDS_HOST}
+      spring.application.name: balance-service-b
     ports:
       - "8082:8082"
     depends_on:
