fix: Get account id from env vars and return account master instead of DTO

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,7 @@ services:
       RDS_PORT: ${RDS_PORT}
       RDS_HOST: ${RDS_HOST}
       spring.application.name: balance-service-a
+      ACCOUNT_ID: a
     ports:
       - "8081:8081"
     depends_on:
@@ -69,6 +70,7 @@ services:
       RDS_PORT: ${RDS_PORT}
       RDS_HOST: ${RDS_HOST}
       spring.application.name: balance-service-b
+      ACCOUNT_ID: b
     ports:
       - "8082:8082"
     depends_on:
