fix: Try to add logs on each request

--- a/config-service/src/main/resources/services/api-gateway.yml
+++ b/config-service/src/main/resources/services/api-gateway.yml
@@ -5,7 +5,16 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://${DISCOVERY_SERVICE}:8002/eureka/
-              
+
+logging:
+  level:
+    reactor:
+      netty: INFO
+    org:
+      springframework:
+        cloud:
+          gateway: INFO
+
 spring:
   cloud:
     gateway:
